[metadata]
# the package will be referenced with this name
name = file_gcd

# read the version number from the file
version = attr: file_gcd.__version__

author = Daniel Tuzes
author_email = tuzesdaniel@gmail.com
description = A toy model to consume file input and output with simple calculation logic
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danieltuzes/file_gcd
project_urls =
    Source = https://github.com/danieltuzes/file_gcd
    Documentation = https://github.com/danieltuzes/file_gcd/blob/main/README.md

keywords = python, packaging, pip

# tells the package repository the versions you support
# python doesn't care about this info
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    
[options]
# the code needs this/these external libraries
# version number is optionial
install_requires=
    pandas

# ofc you already have python, but this request must be satisfied
python_requires=>=3.9

# tests_require is deprecated. Tell the user how to test
# and provide a separate file such as requirements.txt

[options.package_data]
file_gcd = *.csv